--- a/html/registerFrist.html
+++ b/html/registerFrist.html
@@ -138,7 +138,7 @@
 				$( '.weixing' ).css( 'display', 'block' );
 				$( '#box' ).css( 'display', 'none' );
 				setTimeout(function(){
-					location.href = '';
+					location.href = 'find.html';
 				},3000)
 			} )
 			
