--- a/html/register.html
+++ b/html/register.html
@@ -5,111 +5,9 @@
 		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<title>登录页面</title>
 		<link href="http://at.alicdn.com/t/font_uh7x89hvyjozjjor.css" rel="stylesheet">
+		<link href="../css/register.css" rel="stylesheet">
 		<script src="../js/zepto.min.js" type="application/javascript"></script>
 		<script src="../js/touch.js" type="application/javascript"></script>
-		<style>
-		*{
-			margin: 0;
-			padding: 0;
-		}
-		html{
-			font-size: 62.5%;
-		}
-		#mainDiv{
-			position: absolute;
-			width: 100%;
-			height: 100%;
-			background: url(../img/2.jpg);
-			background-size: 50% 50%;
-			opacity: .2;
-		}
-		.top-top{
-			position: absolute;
-			left: 35%;
-			top: 13%;
-			width: 33%;
-			height: 16%;
-			background: #31abfe;
-			border-top-left-radius: 23px;
-			border-top-right-radius: 23px;
-		}
-		.icon-weixing{
-			position: absolute;
-			left: 65%;
-			top: 62%;
-			font-size: 2.5rem;
-			color: #FFFFFF;
-		}
-		.empty1{
-			position: absolute;
-			left: 0%;
-			top: 100%;
-			width: 100%;
-			height: 20%;
-			background: #f8faf7;
-			border-bottom-left-radius: 23px;
-			border-bottom-right-radius: 23px;
-			border: 1px solid #f0f0f0;
-			box-sizing: border-box;
-		}
-		.empty2{
-			position: absolute;
-			left: 43%;
-			top: 95%;
-			width: 0;
-			height: 0;
-			border: 10px solid #31ABFE;
-			border-color: #31ABFE transparent transparent transparent;
-		}
-		.letter{
-			position: absolute;
-			left: 33%;
-			top: 36%;
-			font-size: 3rem;
-			font-weight: bold;
-		}
-		.top-center{
-			width: 78%;
-			height: 5%;
-			padding-top: 10px;
-			padding-bottom: 10px;
-			text-align: center;
-			border-radius: 21px;
-			position: absolute;
-			left: 11%;
-			top: 75%;
-			font-size: 2rem;
-			color: #31ABFE;
-			border: 1px solid #31ABFE;
-		}
-		.chose{
-			position: absolute;
-			bottom: 8%;
-			left: 16%;
-			width: 14px;
-			height: 14px;
-			text-align: center;
-			line-height: 14px;
-			border:1px solid #818287;
-			border-radius: 7px;
-		}
-		.top-bott p{
-			position: absolute;
-			bottom: 8%;
-			left: 25%;
-			color: #818287;
-		}
-		.top-bott p a{
-			margin-left: 5px;
-			color: #818287;
-		}
-		.icon-tubiao19{
-			font-size: 1rem;
-			color: #818287;
-			display: none;
-		}
-		
-		</style>
 	</head>
 	<body>
 		<section class="body">
